dist/media/Ingress.nzbget.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nzbget
  namespace: media
spec:
  rules:
    - host: nzbget.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: nzbget
                port:
                  number: 6789
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - nzbget.cmdcentral.xyz
      secretName: media-tls
